--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="string_navigation_raw">Raw data</string>
-    <string name="string_navigation_explanation">Explenation</string>
+    <string name="string_navigation_explanation">Explanation</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -25,4 +25,5 @@
     <string name="string_navigation_listofairports">List of airports</string>
     <string name="time">Time</string>
     <string name="raw_code">RAW Code</string>
+    <string name="loading">Loading...</string>
 </resources>
